# dynamic_navigation

./: README.md
dynamic_navigation/: CMakeLists.txt  package.xml
dynamic_navigation/include/dynamic_navigation/: map_controller.hpp  map_saver.hpp  obstacle_detector.hpp
dynamic_navigation/launch/: dynamic_navigation.launch.py
dynamic_navigation/maps/: lab.yaml  lab_long.pgm  lab_long.yaml
dynamic_navigation/src/: map_controller_node.cpp  map_saver_node.cpp  obstacle_detector_node.cpp
dynamic_navigation/src/dynamic_navigation/: map_controller.cpp  map_saver.cpp  obstacle_detector.cpp
dynamic_navigation_interfaces/: CMakeLists.txt  package.xml
dynamic_navigation_interfaces/srv/: LongTermMap.srv  Metadata.srv
